RESOLVED FIXED274087
Ellipsis renders multiple times when `position: relative` and `top` is used
https://bugs.webkit.org/show_bug.cgi?id=274087
Summary Ellipsis renders multiple times when `position: relative` and `top` is used
krassowski.michal
Reported 2024-05-13 07:33:12 PDT
Created attachment 471385 [details] Reproducer The ellipsis renders multiple times when `position: relative` and `top` is used in child elements within an absolutely positioned inset element.
Attachments
Reproducer (642 bytes, text/html)
2024-05-13 07:33 PDT, krassowski.michal
no flags
Firefox, Chrome, Webkit (GNOME Web) (59.78 KB, image/png)
2024-05-13 07:35 PDT, krassowski.michal
no flags
Test reduction (364 bytes, text/html)
2024-06-02 08:12 PDT, alan
no flags
[fast-cq]Patch (8.71 KB, patch)
2024-06-02 12:43 PDT, alan
no flags
krassowski.michal
Comment 1 2024-05-13 07:35:41 PDT
Created attachment 471386 [details] Firefox, Chrome, Webkit (GNOME Web)
Ahmad Saleem
Comment 2 2024-05-13 13:13:43 PDT
NOTE - it is reproducible on Safari Technology Preview 194 and Safari 17.5 as well.
Radar WebKit Bug Importer
Comment 3 2024-05-20 07:34:13 PDT
alan
Comment 4 2024-06-02 08:12:35 PDT
Created attachment 471565 [details] Test reduction
alan
Comment 5 2024-06-02 12:43:11 PDT
Created attachment 471569 [details] [fast-cq]Patch
EWS
Comment 6 2024-06-03 05:17:23 PDT
Committed 279645@main (15bbd645988c): <https://commits.webkit.org/279645@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471569 [details].
Note You need to log in before you can comment on or make changes to this bug.