Ellipsis renders multiple times when `position: relative` and `top` is used https://bugs.webkit.org/show_bug.cgi?id=274087 <rdar://problem/128394449>

Reviewed by Antti Koivisto.

Let's not paint line ending ellipsis when painting is meant to include inline box (with layer) content only.

* LayoutTests/fast/inline/multiple-ellispsis-rendering-when-inline-box-has-layer-expected.html: Added.
* LayoutTests/fast/inline/multiple-ellispsis-rendering-when-inline-box-has-layer.html: Added.
* Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContentPainter.cpp:
(WebCore::LayoutIntegration::InlineContentPainter::InlineContentPainter):
(WebCore::LayoutIntegration::InlineContentPainter::paint):
(WebCore::LayoutIntegration::LayerPaintScope::LayerPaintScope):
(WebCore::LayoutIntegration::LayerPaintScope::includes):
* Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContentPainter.h:

Canonical link: https://commits.webkit.org/279645@main